--- a/pikaron/slideweuni/adm/style/acp_slideweuni.html
+++ b/pikaron/slideweuni/adm/style/acp_slideweuni.html
@@ -23,7 +23,7 @@
 		<legend><i class="icon fa-cog fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;{{ lang('GENERAL_OPTIONS') }}</legend>
 
 		<dl>
-			<dt><label for="config[slideweuni_active]">{{ lang('L_SLIDE_WEUNI_ACTIVE') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_ACTIVE') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_active1" name="config[slideweuni_active]" value="1"{% if S_SLIDEWEUNI_ACTIVE %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_active1">{{ lang('YES') }}</label>
@@ -50,7 +50,7 @@
 		</dl>
 
 		<dl>
-			<dt><label for="config[slideweuni_title]">{{ lang('L_SLIDE_WEUNI_TITLE') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_TITLE') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_title1" name="config[slideweuni_title]" value="1"{% if S_SLIDEWEUNI_TITLE %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_title1">{{ lang('YES') }}</label>
@@ -74,7 +74,7 @@
 		</dl>
 
 		<dl>
-			<dt><label for="config[slideweuni_search]">{{ lang('L_SLIDE_WEUNI_SEARCH') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_SEARCH') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_search1" name="config[slideweuni_search]" value="1"{% if S_SLIDEWEUNI_SEARCH %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_search1">{{ lang('YES') }}</label>
@@ -84,7 +84,7 @@
 		</dl>
 
 		<dl>
-			<dt><label for="config[slideweuni_inter]">{{ lang('L_SLIDE_WEUNI_INTER') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_INTER') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_inter1" name="config[slideweuni_inter]" value="1"{% if S_SLIDEWEUNI_INTER %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_inter1">{{ lang('YES') }}</label>
@@ -94,7 +94,7 @@
 		</dl>
 
 		<dl>
-			<dt><label for="config[slideweuni_controls]">{{ lang('L_SLIDE_WEUNI_CONTROLS') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_CONTROLS') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_controls1" name="config[slideweuni_controls]" value="1"{% if S_SLIDEWEUNI_CONTROLS %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_controls1">{{ lang('YES') }}</label>
@@ -104,7 +104,7 @@
 		</dl>
 
 		<dl>
-			<dt><label for="config[slideweuni_aleatory]">{{ lang('L_SLIDE_WEUNI_ALEATORY') }}{{ lang('COLON') }}</label></dt>
+			<dt><label>{{ lang('L_SLIDE_WEUNI_ALEATORY') }}{{ lang('COLON') }}</label></dt>
 			<dd>
 				<input type="radio" id="slideweuni_aleatory1" name="config[slideweuni_aleatory]" value="1"{% if S_SLIDEWEUNI_ALEATORY %} checked="checked"{% endif %} />
 				<label class="set" for="slideweuni_aleatory1">{{ lang('YES') }}</label>
@@ -129,58 +129,56 @@
 		</p>
 	</fieldset>
 
-	{% if images %}
-		{% for image in images %}
+	{% for image in images %}
 
-			<fieldset>
-				<legend><i class="icon fa-camera fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;{{ lang('ACP_SLIDE_WEUNI_IMAGES') }} {{ image.KEY }}</legend>
+		<fieldset>
+			<legend><i class="icon fa-camera fa-lg" aria-hidden="true"></i>&nbsp;&nbsp;&nbsp;{{ lang('ACP_SLIDE_WEUNI_IMAGES') }} {{ image.KEY }}</legend>
 
-				<dl>
-					<dt><label for="images[image{{ image.KEY }}]">{{ lang('L_SLIDE_WEUNI_IMG', image.KEY) }}{{ lang('COLON') }}</label></dt>
-					<dd>
-						<input class="textbox" id="images[image{{ image.KEY }}]" type="text" size="78" maxlength="255" name="images[image{{ image.KEY }}]" value="{{ image.IMAGE }}">
-						<br>
-						{% if image.THERE_IMAGE %}
-							{% if image.HTTP_IMAGE %}
-								{% if image.THERE_HTTP_IMAGE %}
-									<img src="{{ image.IMAGE }}" class="slideweuni-img" title="{{ image.IMAGE }}" alt="{{ image.IMAGE }}">
-								{% else %}
-									<i>{{ lang('L_SLIDE_WEUNI_NO_IMG_URL') }}</i>
-								{% endif %}
+			<dl>
+				<dt><label for="images[image{{ image.KEY }}]">{{ lang('L_SLIDE_WEUNI_IMG', image.KEY) }}{{ lang('COLON') }}</label></dt>
+				<dd>
+					<input class="textbox" id="images[image{{ image.KEY }}]" type="text" size="78" maxlength="255" name="images[image{{ image.KEY }}]" value="{{ image.IMAGE }}">
+					<br>
+					{% if image.THERE_IMAGE %}
+						{% if image.HTTP_IMAGE %}
+							{% if image.THERE_HTTP_IMAGE %}
+								<img src="{{ image.IMAGE }}" class="slideweuni-img" title="{{ image.IMAGE }}" alt="{{ image.IMAGE }}">
 							{% else %}
-								{% if image.LOCAL_IMAGE %}
-									<img src="{{ ROOT_PATH }}ext/pikaron/slideweuni/images/{{ image.IMAGE }}" class="slideweuni-img" title ="{{ image.IMAGE }}" alt="{{ image.IMAGE }}"/>
-								{% else %}
-									<i>{{ lang('L_SLIDE_WEUNI_NO_IMG') }} {{ image.KEY }} {{ lang('L_SLIDE_WEUNI_NO_IMG_RUTE') }} {{ ROOT_PATH }}ext/pikaron/slideweuni/images/{{ image.IMAGE }}</i>
-								{% endif %}
+								<i>{{ lang('L_SLIDE_WEUNI_NO_IMG_URL') }}</i>
 							{% endif %}
 						{% else %}
-							<i>{{ lang('L_SLIDE_WEUNI_NO_IMG') }} {{ image.KEY }}</i>
+							{% if image.LOCAL_IMAGE %}
+								<img src="{{ ROOT_PATH }}ext/pikaron/slideweuni/images/{{ image.IMAGE }}" class="slideweuni-img" title ="{{ image.IMAGE }}" alt="{{ image.IMAGE }}"/>
+							{% else %}
+								<i>{{ lang('L_SLIDE_WEUNI_NO_IMG') }} {{ image.KEY }} {{ lang('L_SLIDE_WEUNI_NO_IMG_RUTE') }} {{ ROOT_PATH }}ext/pikaron/slideweuni/images/{{ image.IMAGE }}</i>
+							{% endif %}
 						{% endif %}
-						<input type="hidden" id="images[id{{ image.KEY }}]" name="images[id{{ image.KEY }}]" value="{{ image.KEY }}">
-					</dd>
-				</dl>
+					{% else %}
+						<i>{{ lang('L_SLIDE_WEUNI_NO_IMG') }} {{ image.KEY }}</i>
+					{% endif %}
+					<input type="hidden" id="images[id{{ image.KEY }}]" name="images[id{{ image.KEY }}]" value="{{ image.KEY }}">
+				</dd>
+			</dl>
 
-				<dl>
-					<dt><label for="images[url{{ image.KEY }}]">{{ lang('L_SLIDE_WEUNI_URL', image.KEY) }}{{ lang('COLON') }}</label></dt>
-					<dd>
-						<input class="textbox" id="images[url{{ image.KEY }}]" type="url" size="78" maxlength="255" name="images[url{{ image.KEY }}]" value="{{ image.URL }}">
-						<br><br>
-					</dd>
-				</dl>
+			<dl>
+				<dt><label for="images[url{{ image.KEY }}]">{{ lang('L_SLIDE_WEUNI_URL', image.KEY) }}{{ lang('COLON') }}</label></dt>
+				<dd>
+					<input class="textbox" id="images[url{{ image.KEY }}]" type="url" size="78" maxlength="255" name="images[url{{ image.KEY }}]" value="{{ image.URL }}">
+					<br><br>
+				</dd>
+			</dl>
 
-			</fieldset>
+		</fieldset>
 
-			<fieldset>
-				<legend>{{ lang('ACP_SUBMIT_CHANGES') }}</legend>
-				<p class="submit-buttons">
-					<input class="adm-button" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
-					<input class="adm-button" type="reset" id="reset" name="reset" value="{{ lang('RESET') }}" />
-				</p>
-			</fieldset>
+		<fieldset>
+			<legend>{{ lang('ACP_SUBMIT_CHANGES') }}</legend>
+			<p class="submit-buttons">
+				<input class="adm-button" type="submit" id="submit" name="submit" value="{{ lang('SUBMIT') }}" />&nbsp;
+				<input class="adm-button" type="reset" id="reset" name="reset" value="{{ lang('RESET') }}" />
+			</p>
+		</fieldset>
 
-		{% endfor %}
-	{% endif %}
+	{% endfor %}
 	{{ S_FORM_TOKEN }}
 </form>
 
